--- a/internal/configs/version1/nginx.ingress.tmpl
+++ b/internal/configs/version1/nginx.ingress.tmpl
@@ -88,7 +88,7 @@ server {
 
 	{{range $location := $server.Locations}}
 	location {{$location.Path}} {
-		set $service "{{$location.ServiceName}}"; 
+		set $service "{{$location.ServiceName}}";
 		{{with $location.MinionIngress}}
 		# location for minion {{$location.MinionIngress.Namespace}}/{{$location.MinionIngress.Name}}
 		set $resource_name "{{$location.MinionIngress.Name}}";
@@ -157,7 +157,7 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header X-Forwarded-Host $host;
 		proxy_set_header X-Forwarded-Port $server_port;
-		proxy_set_header X-Forwarded-Proto {{if $server.RedirectToHTTPS}}https{{else}}$scheme{{end}};
+		proxy_set_header X-Forwarded-Proto {{if $server.RedirectToHTTPS}}https{{else}}$http_x_forwarded_proto{{end}};
 		proxy_buffering {{if $location.ProxyBuffering}}on{{else}}off{{end}};
 
 		{{- if $location.ProxyBuffers}}
